--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,5 @@
 body{
-    height: 100vh;
-    background: #ffffff url("../resources/images/Background.jpg") no-repeat fixed left top;
-    background-size: 100vw 100vh;
+    height: 100vh; 
 }
 #root{
     min-height: 100%;
@@ -14,13 +12,59 @@ body{
 
 .Header{
     height: 10%;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
-
+.logo{
+    width: 30%;
+    font-size: 2vw;
+    color: #DE354C;
+    float: left;
+}
+.logoText{
+    font-family: 'Pacifico', cursive;
+    text-shadow: rgb(244,244,244) 1px 1px 2px;
+}
 .Footer{
     height: 30%;
     background-color: #5C5F58;
 }
-
 .Content{
-    height: 90%;
+    height: 100%;
+    background: #ffffff url("../resources/images/Background.jpg") no-repeat fixed left top;
+    background-size: 100vw 100vh;
 }
+
+.Backdrop{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.navbar{
+    float: right;
+    width: 70%;
+    color: #FFF;
+    *{
+        font-family: 'Open Sans', sans-serif;
+    }
+    .navList{
+        list-style-type: none;
+        margin: 0 3vw;
+        padding: 0;
+        float: right;
+        .navItem{
+            display: inline-block;
+            margin: 15px;
+            padding: 0 ;
+            cursor: pointer;
+            box-sizing: border-box;
+            &:hover{
+                font-weight: bold;
+            }
+        }
+    }
+}
+
