--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,6 @@
+*{
+    transition: all .5s;
+}
 body{
     height: 100vh; 
 }
@@ -16,6 +19,8 @@ body{
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1000;
+    background-color: rgba(0,0,0,0.4);
 }
 .logo{
     width: 30%;
@@ -26,9 +31,10 @@ body{
 .logoText{
     font-family: 'Pacifico', cursive;
     text-shadow: rgb(244,244,244) 1px 1px 2px;
+    cursor: pointer;
 }
 .Footer{
-    height: 30%;
+    height: 10%;
     background-color: #5C5F58;
 }
 .Content{
@@ -38,9 +44,13 @@ body{
 }
 
 .Backdrop{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0,0,0,0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
 }
 
 .navbar{
@@ -49,6 +59,7 @@ body{
     color: #FFF;
     *{
         font-family: 'Open Sans', sans-serif;
+        transition: all 1s;
     }
     .navList{
         list-style-type: none;
@@ -57,14 +68,91 @@ body{
         float: right;
         .navItem{
             display: inline-block;
-            margin: 15px;
-            padding: 0 ;
+            margin: 10px 0;
+            padding: 5px 15px ;
             cursor: pointer;
             box-sizing: border-box;
             &:hover{
-                font-weight: bold;
+                background-color: rgba(255,255,255,0.4);
             }
         }
     }
 }
+.Home,.Pages{
+    position: relative;
+    z-index: 7;
+}
+.Home{
+    top: 37vh;
+    left: 5vw;
+    animation: load 2s normal;
+    .HomeText{
+        color: rgba(255,255,255,1);
+        text-align: left;
+        label{
+            font-family: 'Open Sans', sans-serif;
+            font-size: 8vh;
+        }
+        p{
+            font-family: 'Open Sans', sans-serif;
+            font-size: 2vh;
+            width: 50vw;
+        }
+    }
+}
 
+@keyframes load {
+    0%   {opacity: 0;}
+    100% {opacity: 1;}
+  }
+
+.whiteButton{
+    border-color: #FFF !important;
+    color: #FFF !important;
+    border-radius: 0 !important;
+    &:hover{
+        background-color: #FFF !important;
+        color: #000 !important;
+    }
+}
+
+.Pages{
+    display: flex;
+    background-color: #F5F5F5;
+    padding: 5vh 0;
+    flex-direction: row;
+    justify-content: center;
+    .Paper{
+        width: 25vw;
+        margin: 0 2vw;
+        height: 60vh;
+        background-color: rgba(255,255,255,0.7);
+        p{
+            text-align: justify;
+            padding: 0 3vw;
+        }
+    }
+}
+
+.pageIcon{
+    margin-top: 7vh;
+    color:#DE354C;
+    width: 4em !important;
+    height: 4em !important;
+}
+
+.pageButton{
+    border-color: #DE354C !important;
+    color: #DE354C !important;
+    border-radius: 0 !important;
+    margin-top: 5vh !important;
+    &:hover{
+        background-color: #DE354C !important;
+        color: #FFF !important;
+    }
+}
+
+.catalouge{
+ height: 100%; 
+ background-color: #F5F5F5; 
+}
