--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -159,6 +159,5 @@ body{
 }
 
 .LanguageSelection,.AuthorSelection,.BookView{
-    padding-top: 30vh;
-    padding: 3vw;
+    padding: 15vh 3vw 0vh 3vw;
 }
